--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stingrayscenics",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5076",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.5.0",
