backend hooked up, writing first query

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
+    "express": "^4.21.2",
     "framer-motion": "^11.11.11",
+    "pg": "^8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
@@ -21,9 +24,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "npm run start-client & npm run start-api",
+    "start-client": "react-scripts start",
+    "server": "nodemon --watch server api/index.js",
+    "start-api": "node api/index.js",
+    "build": "CI=false && react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
